# Wechat

./: dump.rdb
ChatServer/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ConfigMgr.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusGrpcClient.h  config.ini  const.h  main.cpp
GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.h  config.ini  const.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
Qtwidget/build-chat-unknown-Debug/: Makefile  chat  moc_clickedlabel.cpp  moc_httpmgr.cpp  moc_logindialog.cpp  moc_mainwindow.cpp  moc_registerdialog.cpp  moc_resetdialog.cpp  moc_tcpmgr.cpp  moc_usermgr.cpp  qrc_rc.cpp  ui_logindialog.h  ui_mainwindow.h  ui_registerdialog.h  ui_resetdialog.h
Qtwidget/chat/: chat.pro  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h  usermgr.h
StatusServer/: CMakeLists.txt  ConfigMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  StatusServer.cpp  config.ini  const.h  message.grpc.pb.cc
VarifyServer/: config.json  dump.rdb  package-lock.json  package.json  server.js
